--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     },
     "devDependencies": {
         "@angular-devkit/build-angular": "~0.1100.1",
-        "@angular/cli": "~11.0.1",
+        "@angular/cli": "^11.0.7",
         "@angular/compiler-cli": "~11.0.0",
         "@types/jasmine": "~3.6.0",
         "@types/jasminewd2": "~2.0.8",
